// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactsList should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-page-header-wrap"
      >
        <div
          class="el-page-header-max-width el-page-header-wrap-inner"
        >
          <div
            class="el-page-header-container"
          >
            <div
              class="el-page-header-container"
            >
              <div
                class="el-flex-column el-flex-container"
              >
                <div
                  class="el-page-header-title-container"
                >
                  <div
                    class="el-mr3 el-has-bold-text el-text2xl el-text-base"
                  >
                    Contacts
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-button-group"
            >
              <div
                class="el-button-group-inner"
              >
                <button
                  class="el-mb5 el-button-size-small el-intent-primary el-button"
                >
                  <div
                    class="el-button-loader"
                  />
                  New Contact
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-flex-column el-has-max-width el-flex-container"
      >
        <div
          class="el-tile"
        >
          <form>
            <div
              class="el-mb8 el-form-layout"
            >
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search name"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Contact Name
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="address"
                    placeholder="Search address"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Contact Address
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="email"
                    placeholder="Search email"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Contact Email
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <label
                    class="el-label"
                  >
                    Active Contacts
                  </label>
                  <div
                    class="el-has-grey-bg el-toggle-radio-wrap"
                  >
                    <input
                      checked=""
                      class="el-toggle-radio"
                      id="option-active-all"
                      name="active"
                      type="radio"
                      value=""
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-all"
                    >
                      <span
                        class="el-toggle-radio-item"
                      >
                        All
                      </span>
                    </label>
                    <input
                      class="el-toggle-radio"
                      id="option-active-true"
                      name="active"
                      type="radio"
                      value="true"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-true"
                    >
                      <span
                        class="el-toggle-radio-item"
                      >
                        Active
                      </span>
                    </label>
                    <input
                      class="el-toggle-radio"
                      id="option-active-false"
                      name="active"
                      type="radio"
                      value="false"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-false"
                    >
                      <span
                        class="el-toggle-radio-item"
                      >
                        Inactive
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <div
            class="el-loader-container"
          >
            <div
              class="el-loader"
            >
              <div
                class="el-loader-moving-bar"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-page-header-wrap"
    >
      <div
        class="el-page-header-max-width el-page-header-wrap-inner"
      >
        <div
          class="el-page-header-container"
        >
          <div
            class="el-page-header-container"
          >
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-page-header-title-container"
              >
                <div
                  class="el-mr3 el-has-bold-text el-text2xl el-text-base"
                >
                  Contacts
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-button-group"
          >
            <div
              class="el-button-group-inner"
            >
              <button
                class="el-mb5 el-button-size-small el-intent-primary el-button"
              >
                <div
                  class="el-button-loader"
                />
                New Contact
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-flex-column el-has-max-width el-flex-container"
    >
      <div
        class="el-tile"
      >
        <form>
          <div
            class="el-mb8 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Search name"
                  type="search"
                />
                <span
                  class="el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Contact Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="address"
                  placeholder="Search address"
                  type="search"
                />
                <span
                  class="el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Contact Address
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="email"
                  placeholder="Search email"
                  type="search"
                />
                <span
                  class="el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Contact Email
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <label
                  class="el-label"
                >
                  Active Contacts
                </label>
                <div
                  class="el-has-grey-bg el-toggle-radio-wrap"
                >
                  <input
                    checked=""
                    class="el-toggle-radio"
                    id="option-active-all"
                    name="active"
                    type="radio"
                    value=""
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-active-all"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      All
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="option-active-true"
                    name="active"
                    type="radio"
                    value="true"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-active-true"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Active
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="option-active-false"
                    name="active"
                    type="radio"
                    value="false"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-active-false"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Inactive
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ContactsList should match a snapshot when not loading but no contact 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-page-header-wrap"
      >
        <div
          class="el-page-header-max-width el-page-header-wrap-inner"
        >
          <div
            class="el-page-header-container"
          >
            <div
              class="el-page-header-container"
            >
              <div
                class="el-flex-column el-flex-container"
              >
                <div
                  class="el-page-header-title-container"
                >
                  <div
                    class="el-mr3 el-has-bold-text el-text2xl el-text-base"
                  >
                    Contacts
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-button-group"
            >
              <div
                class="el-button-group-inner"
              >
                <button
                  class="el-mb5 el-button-size-small el-intent-primary el-button"
                >
                  <div
                    class="el-button-loader"
                  />
                  New Contact
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-flex-column el-has-max-width el-flex-container"
      >
        <div
          class="el-tile"
        >
          <form>
            <div
              class="el-mb8 el-form-layout"
            >
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search name"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Contact Name
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="address"
                    placeholder="Search address"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Contact Address
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="email"
                    placeholder="Search email"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Contact Email
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <label
                    class="el-label"
                  >
                    Active Contacts
                  </label>
                  <div
                    class="el-has-grey-bg el-toggle-radio-wrap"
                  >
                    <input
                      checked=""
                      class="el-toggle-radio"
                      id="option-active-all"
                      name="active"
                      type="radio"
                      value=""
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-all"
                    >
                      <span
                        class="el-toggle-radio-item"
                      >
                        All
                      </span>
                    </label>
                    <input
                      class="el-toggle-radio"
                      id="option-active-true"
                      name="active"
                      type="radio"
                      value="true"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-true"
                    >
                      <span
                        class="el-toggle-radio-item"
                      >
                        Active
                      </span>
                    </label>
                    <input
                      class="el-toggle-radio"
                      id="option-active-false"
                      name="active"
                      type="radio"
                      value="false"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-false"
                    >
                      <span
                        class="el-toggle-radio-item"
                      >
                        Inactive
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-page-header-wrap"
    >
      <div
        class="el-page-header-max-width el-page-header-wrap-inner"
      >
        <div
          class="el-page-header-container"
        >
          <div
            class="el-page-header-container"
          >
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-page-header-title-container"
              >
                <div
                  class="el-mr3 el-has-bold-text el-text2xl el-text-base"
                >
                  Contacts
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-button-group"
          >
            <div
              class="el-button-group-inner"
            >
              <button
                class="el-mb5 el-button-size-small el-intent-primary el-button"
              >
                <div
                  class="el-button-loader"
                />
                New Contact
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-flex-column el-has-max-width el-flex-container"
    >
      <div
        class="el-tile"
      >
        <form>
          <div
            class="el-mb8 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Search name"
                  type="search"
                />
                <span
                  class="el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Contact Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="address"
                  placeholder="Search address"
                  type="search"
                />
                <span
                  class="el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Contact Address
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="email"
                  placeholder="Search email"
                  type="search"
                />
                <span
                  class="el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Contact Email
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <label
                  class="el-label"
                >
                  Active Contacts
                </label>
                <div
                  class="el-has-grey-bg el-toggle-radio-wrap"
                >
                  <input
                    checked=""
                    class="el-toggle-radio"
                    id="option-active-all"
                    name="active"
                    type="radio"
                    value=""
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-active-all"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      All
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="option-active-true"
                    name="active"
                    type="radio"
                    value="true"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-active-true"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Active
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="option-active-false"
                    name="active"
                    type="radio"
                    value="false"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-active-false"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Inactive
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ContactsList should match a snapshot with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-page-header-wrap"
      >
        <div
          class="el-page-header-max-width el-page-header-wrap-inner"
        >
          <div
            class="el-page-header-container"
          >
            <div
              class="el-page-header-container"
            >
              <div
                class="el-flex-column el-flex-container"
              >
                <div
                  class="el-page-header-title-container"
                >
                  <div
                    class="el-mr3 el-has-bold-text el-text2xl el-text-base"
                  >
                    Contacts
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-button-group"
            >
              <div
                class="el-button-group-inner"
              >
                <button
                  class="el-mb5 el-button-size-small el-intent-primary el-button"
                >
                  <div
                    class="el-button-loader"
                  />
                  New Contact
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-flex-column el-has-max-width el-flex-container"
      >
        <div
          class="el-tile"
        >
          <form>
            <div
              class="el-mb8 el-form-layout"
            >
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="name"
                    placeholder="Search name"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Contact Name
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="address"
                    placeholder="Search address"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Contact Address
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    name="email"
                    placeholder="Search email"
                    type="search"
                  />
                  <span
                    class="el-icon-new el-icon"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Contact Email
                  </label>
                </div>
              </div>
              <div
                class="el-input-wrap"
              >
                <div
                  class="el-input-group"
                >
                  <label
                    class="el-label"
                  >
                    Active Contacts
                  </label>
                  <div
                    class="el-has-grey-bg el-toggle-radio-wrap"
                  >
                    <input
                      checked=""
                      class="el-toggle-radio"
                      id="option-active-all"
                      name="active"
                      type="radio"
                      value=""
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-all"
                    >
                      <span
                        class="el-toggle-radio-item"
                      >
                        All
                      </span>
                    </label>
                    <input
                      class="el-toggle-radio"
                      id="option-active-true"
                      name="active"
                      type="radio"
                      value="true"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-true"
                    >
                      <span
                        class="el-toggle-radio-item"
                      >
                        Active
                      </span>
                    </label>
                    <input
                      class="el-toggle-radio"
                      id="option-active-false"
                      name="active"
                      type="radio"
                      value="false"
                    />
                    <label
                      class="el-has-grey-bg el-toggle-radio-label"
                      for="option-active-false"
                    >
                      <span
                        class="el-toggle-radio-item"
                      >
                        Inactive
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <div
            class="el-mb8 el-table"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="5"
          >
            <div
              class="el-table-headers-row"
            >
              <div
                class="el-table-header"
              >
                Contact Name
              </div>
              <div
                class="el-table-header"
              >
                Contact Email
              </div>
              <div
                class="el-table-header"
              >
                Contact Mobile Phone
              </div>
              <div
                class="el-table-header"
              >
                Contact Address
              </div>
              <div
                class="el-table-header"
              >
                Contact Active
              </div>
              <div
                class="el-table-header"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="el-table-row-container"
            >
              <div
                class="el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1.25rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5Zm0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Contact Name"
                  >
                    Mr Foo Bar
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1.25rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.41 2L12 12.59 5.41 6h13.18ZM4 18V7.41L10.59 14a2 2 0 0 0 2.82 0L20 7.41V18H4Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Contact Email"
                  >
                    foo@bar.com
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1.25rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 16.81a3.281 3.281 0 0 0-.3-.81l-6-1a3.49 3.49 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.19 3.19 0 0 0-.83-.24A2.924 2.924 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 3.798 3.798 0 0 0 0-.59Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Contact Mobile Phone"
                  >
                    242423424
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1.25rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83Zm-4.05 11.33h-14V8.865l7-4.67 7 4.67v11.63Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Contact Address"
                  >
                    Bar Foo Foo Bar Foo Bar Foo
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Contact Active"
                  >
                    <span
                      class="el-intent-success el-status-indicator"
                    />
                     
                    Active
                  </div>
                </div>
                <div
                  class="el-table-expandable-row-trigger-cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row"
              >
                <div
                  class="el-table-expandable-container"
                >
                  <div
                    class="el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-neutral el-button"
                      >
                        <div
                          class="el-button-loader"
                        />
                        Quick View Contact
                      </button>
                      <button
                        class="el-intent-neutral el-button"
                      >
                        <div
                          class="el-button-loader"
                        />
                        Full Contact
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        <div
                          class="el-button-loader"
                        />
                        Edit Contact
                      </button>
                      <button
                        class="el-intent-danger el-button"
                      >
                        <div
                          class="el-button-loader"
                        />
                        Deactivate
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-table-row-container"
            >
              <div
                class="el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1.25rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5Zm0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Contact Name"
                  >
                    Mr Foo Bar
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1.25rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.41 2L12 12.59 5.41 6h13.18ZM4 18V7.41L10.59 14a2 2 0 0 0 2.82 0L20 7.41V18H4Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Contact Email"
                  >
                    foo@bar.com
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1.25rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 16.81a3.281 3.281 0 0 0-.3-.81l-6-1a3.49 3.49 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.19 3.19 0 0 0-.83-.24A2.924 2.924 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 3.798 3.798 0 0 0 0-.59Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Contact Mobile Phone"
                  >
                    242423424
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                    style="font-size: 1.25rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1.25rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83Zm-4.05 11.33h-14V8.865l7-4.67 7 4.67v11.63Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Contact Address"
                  >
                    Bar Foo Foo Bar Foo Bar Foo
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Contact Active"
                  >
                    <span
                      class="el-intent-danger el-status-indicator"
                    />
                     
                    Inactive
                  </div>
                </div>
                <div
                  class="el-table-expandable-row-trigger-cell"
                >
                  <span
                    class="el-intent-default el-icon-new el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row"
              >
                <div
                  class="el-table-expandable-container"
                >
                  <div
                    class="el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-neutral el-button"
                      >
                        <div
                          class="el-button-loader"
                        />
                        Quick View Contact
                      </button>
                      <button
                        class="el-intent-neutral el-button"
                      >
                        <div
                          class="el-button-loader"
                        />
                        Full Contact
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        <div
                          class="el-button-loader"
                        />
                        Edit Contact
                      </button>
                      <button
                        class="el-intent-primary el-button"
                      >
                        <div
                          class="el-button-loader"
                        />
                        Activate
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-mb8"
          >
            <div
              class="el-pagination-wrap"
            >
              <button
                class="el-pagination-button"
                data-testid="back-button"
                type="button"
              >
                <span
                  class="el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.495 20.004a.998.998 0 0 1-.709-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
              <div
                class="el-pagination-text"
              >
                <input
                  class="el-pagination-input"
                  value="1"
                />
                 of 
                1
              </div>
              <button
                class="el-pagination-button"
                data-testid="forward-button"
                type="button"
              >
                <span
                  class="el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.505 20.004a.998.998 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1.002 1.002 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a.998.998 0 0 1-.71.29Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-page-header-wrap"
    >
      <div
        class="el-page-header-max-width el-page-header-wrap-inner"
      >
        <div
          class="el-page-header-container"
        >
          <div
            class="el-page-header-container"
          >
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-page-header-title-container"
              >
                <div
                  class="el-mr3 el-has-bold-text el-text2xl el-text-base"
                >
                  Contacts
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-button-group"
          >
            <div
              class="el-button-group-inner"
            >
              <button
                class="el-mb5 el-button-size-small el-intent-primary el-button"
              >
                <div
                  class="el-button-loader"
                />
                New Contact
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-flex-column el-has-max-width el-flex-container"
    >
      <div
        class="el-tile"
      >
        <form>
          <div
            class="el-mb8 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Search name"
                  type="search"
                />
                <span
                  class="el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Contact Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="address"
                  placeholder="Search address"
                  type="search"
                />
                <span
                  class="el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Contact Address
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="email"
                  placeholder="Search email"
                  type="search"
                />
                <span
                  class="el-icon-new el-icon"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Contact Email
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <label
                  class="el-label"
                >
                  Active Contacts
                </label>
                <div
                  class="el-has-grey-bg el-toggle-radio-wrap"
                >
                  <input
                    checked=""
                    class="el-toggle-radio"
                    id="option-active-all"
                    name="active"
                    type="radio"
                    value=""
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-active-all"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      All
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="option-active-true"
                    name="active"
                    type="radio"
                    value="true"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-active-true"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Active
                    </span>
                  </label>
                  <input
                    class="el-toggle-radio"
                    id="option-active-false"
                    name="active"
                    type="radio"
                    value="false"
                  />
                  <label
                    class="el-has-grey-bg el-toggle-radio-label"
                    for="option-active-false"
                  >
                    <span
                      class="el-toggle-radio-item"
                    >
                      Inactive
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb8 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="5"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              Contact Name
            </div>
            <div
              class="el-table-header"
            >
              Contact Email
            </div>
            <div
              class="el-table-header"
            >
              Contact Mobile Phone
            </div>
            <div
              class="el-table-header"
            >
              Contact Address
            </div>
            <div
              class="el-table-header"
            >
              Contact Active
            </div>
            <div
              class="el-table-header"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5Zm0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Contact Name"
                >
                  Mr Foo Bar
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.41 2L12 12.59 5.41 6h13.18ZM4 18V7.41L10.59 14a2 2 0 0 0 2.82 0L20 7.41V18H4Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Contact Email"
                >
                  foo@bar.com
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21 16.81a3.281 3.281 0 0 0-.3-.81l-6-1a3.49 3.49 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.19 3.19 0 0 0-.83-.24A2.924 2.924 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 3.798 3.798 0 0 0 0-.59Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Contact Mobile Phone"
                >
                  242423424
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83Zm-4.05 11.33h-14V8.865l7-4.67 7 4.67v11.63Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Contact Address"
                >
                  Bar Foo Foo Bar Foo Bar Foo
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Contact Active"
                >
                  <span
                    class="el-intent-success el-status-indicator"
                  />
                   
                  Active
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-neutral el-button"
                    >
                      <div
                        class="el-button-loader"
                      />
                      Quick View Contact
                    </button>
                    <button
                      class="el-intent-neutral el-button"
                    >
                      <div
                        class="el-button-loader"
                      />
                      Full Contact
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      <div
                        class="el-button-loader"
                      />
                      Edit Contact
                    </button>
                    <button
                      class="el-intent-danger el-button"
                    >
                      <div
                        class="el-button-loader"
                      />
                      Deactivate
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5Zm0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Contact Name"
                >
                  Mr Foo Bar
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.41 2L12 12.59 5.41 6h13.18ZM4 18V7.41L10.59 14a2 2 0 0 0 2.82 0L20 7.41V18H4Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Contact Email"
                >
                  foo@bar.com
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21 16.81a3.281 3.281 0 0 0-.3-.81l-6-1a3.49 3.49 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.19 3.19 0 0 0-.83-.24A2.924 2.924 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 3.798 3.798 0 0 0 0-.59Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Contact Mobile Phone"
                >
                  242423424
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83Zm-4.05 11.33h-14V8.865l7-4.67 7 4.67v11.63Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Contact Address"
                >
                  Bar Foo Foo Bar Foo Bar Foo
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Contact Active"
                >
                  <span
                    class="el-intent-danger el-status-indicator"
                  />
                   
                  Inactive
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-neutral el-button"
                    >
                      <div
                        class="el-button-loader"
                      />
                      Quick View Contact
                    </button>
                    <button
                      class="el-intent-neutral el-button"
                    >
                      <div
                        class="el-button-loader"
                      />
                      Full Contact
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      <div
                        class="el-button-loader"
                      />
                      Edit Contact
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      <div
                        class="el-button-loader"
                      />
                      Activate
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-mb8"
        >
          <div
            class="el-pagination-wrap"
          >
            <button
              class="el-pagination-button"
              data-testid="back-button"
              type="button"
            >
              <span
                class="el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15.495 20.004a.998.998 0 0 1-.709-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
            <div
              class="el-pagination-text"
            >
              <input
                class="el-pagination-input"
                value="1"
              />
               of 
              1
            </div>
            <button
              class="el-pagination-button"
              data-testid="forward-button"
              type="button"
            >
              <span
                class="el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.505 20.004a.998.998 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1.002 1.002 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a.998.998 0 0 1-.71.29Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
